# sghp-twin

./: .env  .gitignore  digital_twin.py  docker-compose.yml  mqtt_test.py  pyproject.toml  readme.md  recycle.py
model/: model-tags.json  model.json  model_tags.json
mosquitto/config/: mosquitto.conf
